# misc-research

./: .gitignore  README.md
BCH-Software-Performance/: BCHN-Fulcrum-Conf-Intervals-and-Power-Calcs.R
Banking-the-Unbanked-through-Cryptocurrency/: Banking-the-Unbanked-through-Cryptocurrency.Rmd  README.md  SDCPC-data-prep.R  SHED-data-prep.R  SPACE-data-prep.R
CashFusion-Descendant-Analysis/: LICENSE  README.md
Financial-Marginalization-and-Cryptocurrency/: Financial-Marginalization-and-Cryptocurrency-Payments.Rmd  Financial-Marginalization-and-Cryptocurrency-Payments.html
General-Blockchain-Age-of-Spent-Outputs/: README.md  construct-edgelist.R  create-dataset-for-analysis.R  extract-tx-graphs.R  get-block-times.R
General-Mempool-Archive/: collect-archive.R  export-csv.R  initialize-archive.R
Monero-Black-Marble-Flood/: LICENSE.md  README.md
Monero-Blockchain-Reorgs/: LICENSE.md
Monero-Cryptography-Benchmarks/: mock-tx-perf.R
Monero-Effective-Ring-Size/: README.md  black-marble-eff-ring-size.R  xmr-ring-gathering.R
Monero-Mempool-Archive/: collect-archive.R  export-csv.R  initialize-archive.R
Monero-Nonstandard-Fees/: README.md
Monero-Peer-Subnet-Deduplication/code/Rust/: Cargo.toml  LICENSE.md
Monero-Peer-Subnet-Deduplication/code/Rust/src/: main.rs
Monero-TX-Confirm-Delay/: coin-comparison.R  followup-pool-comparison.R  other-coin-data-prep.R  pool-comparison.R  tx-delay-diagrams.R  xmr-data-prep.R
Monero-p2pool-Output-Stats/: LICENSE  README.md  p2pool-output-stats.R
Monero-transaction-inputs-stats/: height-2210720-to-2489999.csv
(+72 files in other folders)
